--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
 					</div>
 
 				<!-- Header -->
-					<header id="header">
+					<!-- <header id="header">
 						<a href="index.html" class="logo">Reload</a>
-					</header>
+					</header> -->
 
 				<!-- Nav -->
 					<nav id="nav">
