--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<style>
 			html {
 			  scroll-behavior: smooth;
-			  scroll-margin: 10;
+			  scroll-margin: 69;
 			}
 			</style>
 	</head>
@@ -85,7 +85,7 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<div class="major" style="text-align: left; text-shadow: 2px 2px 8px #0066ff; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;"><span class="intro" style = "text-align:right ; font-size: 40px;" >Introduction <br /></span> </div>
+									<div id="abhash" class="major" style="text-align: left; text-shadow: 2px 2px 8px #0066ff; font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;"><span class="intro" style = "text-align:right ; font-size: 40px;" >Introduction <br /></span> </div>
 									<!-- <h2><a href="#">And this is a<br />
 									massive headline</a></h2> -->
 									<div style="text-align: left;"><p>Hi, I am Abhash Shrestha. A Computer Science and Engineering graduate who is enthusistic about learning and developing new skills.</br> Along with learning technical skills I am also interested in creative writing, critical thinking, and music. </br> Here are some of my work. .</p></div>
