spell correct coursera

--- a/elements.html
+++ b/elements.html
@@ -60,7 +60,7 @@
 
 									<a href="certificates/MTA.pdf" ><div class="zoomer2" style="display: inline-block;"><i class="fa fa-file-pdf-o" style="font-size:30px;color:red;"></i>&nbsp;Microsoft Technology Associate- HTML5</div></a></br>
 										
-									<a href="certificates/datav.pdf"><div class="zoomer2" style="display: inline-block;"><i class="fa fa-file-pdf-o" style="font-size:30px;color:red;"></i>&nbsp;Courser- Data Visualization </div></a></br>
+									<a href="certificates/datav.pdf"><div class="zoomer2" style="display: inline-block;"><i class="fa fa-file-pdf-o" style="font-size:30px;color:red;"></i>&nbsp;Coursera- Data Visualization </div></a></br>
 									
 									<a href="certificates/IOT.pdf"><div class="zoomer2" style="display: inline-block;"><i class="fa fa-file-pdf-o" style="font-size:30px;color:red;"></i>&nbsp;Coursera- Internet of Things</div></a></br>
 									<a href="certificates/TCPIP.pdf"><div class="zoomer2" style="display: inline-block;"><i class="fa fa-file-pdf-o" style="font-size:30px;color:red;"></i>&nbsp;Coursera- TCP/IP and Advanced Topics</div></a></br>
